k8s/database-stateful.yaml
apiVersion: v1
kind: Service
metadata:
  name: moneysaver-db
spec:
  clusterIP: None
  ports:
  - port: 5432
  selector:
    app: moneysaver-db

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: moneysaver-db
spec:
  serviceName: "moneysaver-db"
  replicas: 1
  selector:
    matchLabels:
      app: moneysaver-db
  template:
    metadata:
      labels:
        app: moneysaver-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pg-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: pg-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 10Gi
        limits:
          storage: 10Gi
