k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moneysaver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # - host: api.moneysaver.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moneysaver-api
            port:
              number: 80
